--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "flowbite": "^2.3.0",
     "ionicons": "^7.2.1",
