--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^8.0.0",
+    "firebase": "^10.7.0",
     "flowbite": "^2.3.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
